--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ logging.level.org.hibernate.type=TRACE
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=craftechretailsolutions1@gmail.com
+spring.mail.password=djkr kphm sctm kcoi
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
