--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,1 @@
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url = jdbc:mysql://localhost:3306/hospitalmanagement?allowPublicKeyRetrieval=true&useSSL=false
-
-spring.datasource.url = jdbc:mysql://localhost:3306/hospitalmanagement?
-
-spring.datasource.username = root
-spring.datasource.password = root@1234
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.show-sql=true
-
-spring.web.resources.add-mappings=true
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-
-spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
-spring.mail.username=craftechretailsolutions1@gmail.com
-spring.mail.password=djkr kphm sctm kcoi
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.test-connection=false
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.profiles.active=${ENV:dev}
